# Hall-Effect-Sim

./: .gitignore  LICENCE  README.md  pyproject.toml
Codes/: DataAnalysis_VAngle.ipynb  DataAnalysis_VH.ipynb  SWmodel_lib.py  SWmodel_test.ipynb  SWmodel_test2.ipynb
Codes/Old/: Benjamin.py  DataAnalysis.py  SWmodel_v0-1.py  SWmodel_v0-2.py  SWmodel_v1-1.py  SWmodel_v1-2.py  SWmodel_v2-1.py  SWmodel_v2-1_multiAn.py  data_correction.py  old_check._lines.txt
examples/: generic-demo.py
examples/Hexagonal/: angle_scans.py  astroids.py
examples/Uniaxial/: Angle-sweep.py  Astroid.py  Field-sweep.py
sw/: SW_model.py  __init__.py  anisotropies.py  experiments.py
